; ModuleID = '/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_Encrypt.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_Encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CryptProtectData = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i32*, i64, i32**)* @Encrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Encrypt(i8* %0, i8* %1, i32* %2, i64 %3, i32** %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32**, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32** %4, i32*** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @VLC_UNUSED(i8* %11)
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @VLC_UNUSED(i8* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i32**, i32*** %10, align 8
  %18 = load i32, i32* @CryptProtectData, align 4
  %19 = call i64 @Process(i32* %15, i64 %16, i32** %17, i32 %18)
  ret i64 %19
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i64 @Process(i32*, i64, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
